assets/CSS/main.css
/*
  =======================
  General layout
  =======================
*/

body {
  background-color: #f6f3f2;
}

.d-flex {
  display: flex;
}

/*
  =======================
  Typography
  =======================
*/

h1,
h2,
h3,
h4 {
  font-family: "Nunito", sans-serif;
}

p {
  font-family: "Noto Serif", serif;
}

a {
  text-decoration: none;
  color: black;
}

ul {
  list-style-type: none;
  padding: 0;
}

/*
  =======================
  Buttons
  =======================
*/

.button {
  border-radius: 0.5em;
  background-color: cornflowerblue;
  border: 0;
  padding: 0.6em 0.8em;
  font-family: "Nunito", sans-serif;
}

/*
  =======================
  Navbar
  =======================
*/

.header {
  padding: 0 2em;
  background-color: #d33a2c;
  color: white;
  font-family: "Nunito", sans-serif;
  justify-content: space-between;
  align-items: center;
  font-size: 1.3em;
}

.logo {
  width: 200px;
  padding-top: 20px;
}

.nav-links {
  display: grid;
  grid-auto-flow: column;
}

.nav-links li {
  padding: 0.5em 0.8em;
}

@media (max-width: 1424px) {
  .nav-links :nth-child(6) {
    display: none;
  }
}

.nav-links a {
  color: white;
}

.nav-links li:hover {
  background-color: rgba(00, 00, 00, 0.3);
  border: none;
  border-radius: 10px;
}

.more-nav {
  background-color: rgba(00, 00, 00, 0.2);
  border-radius: 10px;
  border: none;
  margin-left: 8px;
}

.more-nav a {
  align-items: center;
}

.cat-img {
  width: 30px;
  height: auto;
}

.search-bar {
  width: 350px;
}

.search-form {
  box-shadow: 5px 4px 3px rgba(00, 00, 00, 0.2);
  border: none;
  border-radius: 15px;
}

.search-box {
  width: 100%;
  background: white url(../images/search-outline.svg) 15px center/25px no-repeat;
  padding: 14px 50px;
  border: none;
  border-radius: 15px;
}

.search-box::placeholder {
  color: #5c5858;
  font-weight: 600;
}

/*
  =======================
  Top Section
  =======================
*/

.top-section {
  background-color: #bc3428;
  color: white;
  display: grid;
  grid-template-columns: repeat(2, 50%);
}

.top-section-header {
  grid-column: 1 / -1;
  justify-content: center;
  position: relative;
}

.main-title {
  text-align: center;
  justify-content: center;
  align-content: center;
  align-items: center;
  flex-direction: column;
}

.main-title > * {
  background-color: white;
  padding: 0.15em 0.35em 0.35em;
  font-size: 2.4em;
  color: black;
  margin-bottom: -2px;
}

.main-title span {
  width: 150px;
  font-family: "Nunito", sans-serif;
  font-weight: 700;
}

.change-theme {
  position: absolute;
  right: 50px;
  top: 50px;
  justify-content: center;
  align-items: center;
  font-family: "Nunito", sans-serif;
  font-weight: 800;
}

.square-button {
  background-color: white;
  width: 45px;
  height: 45px;
  border-radius: 10px;
  margin-right: 20px;
  transform: rotate(-10deg);
}

.change-theme span {
  padding: 10px;
  border: 1px solid white;
  border-radius: 10px;
}

/* Top Section Articles */

.top-section-article {
  padding: 0 60px;
  width: auto;
  height: 581px;
  position: relative;
}

.top-section-article:hover {
  cursor: pointer;
}

.author {
  padding-top: 60px;
  align-items: center;
  color: white;
}

.top-image-container {
  transform: rotate(-10deg);
  border: 2px solid white;
  margin-right: 25px;
  width: 75px;
  height: 75px;
}

.author-image {
  width: 100%;
  transform: rotate(10deg);
}

.author-name {
  font-family: "Nunito", sans-serif;
}

.author-name strong {
  margin-right: 0.4em;
}

.article-title-div {
  font-size: 1.8em;
  display: inline-block;
  padding: 1em 0;
}

.article-title {
  display: inline;
}

.chatbox {
  width: 20px;
  position: relative;
  top: 4px;
}

.article-title-div span {
  font-size: 16px;
}

.hashtag-links {
  display: flex;
  font-size: 0.9em;
}

.hashtag-links li {
  margin-right: 2.7em;
}

.hashtag-links span {
  color: rgba(00, 00, 00, 0.5);
  padding-right: 0.4em;
}

.hashtag-links sup {
  margin-left: 0.4em;
  font-size: 0.7em;
  font-family: "Nunito", sans-serif;
}

.arrow-button {
  color: white;
  font-size: 2.6em;
  position: absolute;
  bottom: 40px;
}

/*
  =======================
  Aside Section
  =======================
*/

.aside-section {
  background-color: #143252;
  color: white;
  font-size: 1.1em;
  line-height: 35px;
}

.aside-info-wrapper {
  flex-direction: column;
  padding: 50px 100px 50px 150px;
  flex: 1;
  align-items: baseline;
}

.aside-description {
  margin: 0;
}

.aside-list {
  list-style: circle;
  padding: 0.4em 0.3em 1em 2.7em;
  font-size: 1.1em;
}

.aside-btn {
  color: white;
  background-color: yellowgreen;
  font-size: 1.3em;
  font-weight: 600;
}

.aside-link-img {
  flex: 1;
  width: 250px;
  height: auto;
  padding-right: 300px;
  margin-top: -100px;
}

/*
  =======================
  Latest Posts
  =======================
*/

.latest-posts {
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: 600px 900px 600px 600px 240px;
  position: relative;
}

.section-titles-h4 {
  position: absolute;
  transform: rotate(90deg);
  text-transform: uppercase;
  top: 30px;
  left: -50px;
}

/* Articles */

.g-wrapper {
  display: grid;
  height: 100%;
  grid-template-rows: auto auto auto 1fr 125px;
  justify-items: start;
}

.g-wrapper > * {
  margin: 0;
  padding-left: 65px;
}

.published-date {
  padding-top: 50px;
  padding-bottom: 10px;
  text-transform: uppercase;
  font-size: 0.8em;
}

.mid-article-title {
  text-decoration: underline;
  padding-bottom: 30px;
}

.author-name {
  font-weight: 600;
  color: rgb(122, 116, 116);
  padding-bottom: 30px;
}

.author-name a {
  color: rgb(122, 116, 116);
  text-decoration: underline;
}

.article-description {
  line-height: 2em;
}

.arrow {
  font-size: 2em;
  display: grid;
  align-items: center;
  padding-right: 50px;
}

/* Shopify Ad */

.shopify-ad {
  display: grid;
  height: 100%;
  grid-template-rows: auto 1fr;
  justify-items: center;
  align-items: baseline;
  text-align: center;
}

.shopify-ad {
  padding-left: 65px;
}

.friends {
  font-size: 0.7em;
  font-style: italic;
}

.friends span {
  font-size: 1.8em;
}

.ad-box {
  background-color: #f2f2f3;
  border: 1px darkgrey solid;
  border-radius: 15px;
  padding: 20px 40px;
}

.ad-box:hover {
  cursor: pointer;
}

.ad-box img {
  width: 170px;
  height: auto;
  padding-bottom: 15px;
}

.ad-box p {
  padding-bottom: 10px;
}

.shopify-button {
  background-color: #008060;
  font-size: 0.7em;
  font-family: "Noto Serif", serif;
  font-weight: 100;
  padding: 10px 14px;
  color: white;
  border: none;
  border-radius: 5px;
}

/* Special Sections */

.latest-posts :nth-child(6) {
  background-color: #d33a2c;
}

.latest-posts :nth-child(6) img {
  width: 270px;
  height: auto;
}

.latest-posts :nth-child(11) {
  grid-column: 1 / -1;
  text-align: center;
  background-color: #d33a2c;
  margin: 0 45px;

}

.latest-posts :nth-child(11) img {
  width: 200px;
  height: auto;
}

.more-links {
  grid-column: 1 / -1;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  text-decoration: underline;
}

/* Special Divs */

.special-div {
  display: grid;
  grid-template-rows: auto auto 1fr auto auto;
  justify-items: center;
  color: white;
  justify-content: center;
  text-align: center;
  padding: 25px 50px 40px;
  border: none;
  border-radius: 10px;
}

.special-div-title {
  font-size: 3em;
}

.special-div-description {
  line-height: 2em;
}

.special-div .special-button {
  font-size: 1.2em;
  font-weight: 800;
}

.have-account {
  font-size: 0.8em;
  color: white;
  padding-top: 10px;
}

.have-account a {
  color: white;
  text-decoration: underline;
}

/*
  =======================
  Big Blue Ad
  =======================
*/

.big-blue-ad {
  padding: 50px 0;
  background-color: #1b71bb;
  color: white;
  text-align: center;
  justify-items: center;
  justify-content: center;
}

.blue-ad-container {
  width: 900px;
  flex-direction: column;
  align-items: center;
}

.blue-ad-container p {
  font-size: 1.2em;
  line-height: 2em;
  margin: 25px 0 35px 0;
}

.blue-ad-container h1 {
  font-size: 3.4em;
  text-shadow: 2px 4px 3px rgba(00, 00, 00, 0.2);
  line-height: 1.2em;
  margin: 0;
}

.big-blue-ad-img {
  width: 100%;
  margin-top: 55px;
}

.special-button {
  background-color: white;
  color: rgb(38, 125, 204);
  font-weight: 800;
  font-size: 1.5em;
}

/*
  =======================
  Community Links
  =======================
*/

.community-links {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  position: relative;
}

/*
  =======================
  Featured
  =======================
*/

.featured {
  background-color: #d33a2c;
  color: white;
}

/*
  =======================
  Our Guides
  =======================
*/

.our-guides {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  position: relative;
}

.card {
  background-color: #ffffff;
}

.newsletter img {
  width: 600px;
  height: auto;
}

/*
  =======================
  Footer
  =======================
*/

.footer {
  background-color: #d33a2c;
  position: relative;
  color: white;
  padding-top: 50px;
  padding-bottom: 35px;
  background-image: url(../images/laptop__left.svg),
    url(../images/cat-the-behemoth.svg);
  background-position: left 15% bottom 1em, right 12% bottom 2em;
  background-size: 11.2em auto, 14.2em auto;
  background-repeat: no-repeat;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.topic-links {
  align-items: baseline;
  flex-wrap: wrap;
  min-width: 800px;
  max-width: 1010px;
  height: auto;
  justify-content: center;
}

.topic-links {
  list-style: circle;
}

.topic-links li {
  font-size: 1.4em;
  padding-right: 1.6em;
  margin-bottom: 1em;
}

.footer > p {
  font-size: 0.8em;
  line-height: 2em;
}

.nav-footer-items {
  flex-wrap: wrap;
  max-width: 450px;
  height: auto;
  justify-content: center;
}

.nav-footer-items li {
  margin: 0.5em 0.5em;
  text-decoration: underline;
}

.nav-footer-items > li > a,
.topic-links > li > a {
  color: white;
}

.back-to-top {
  position: absolute;
  bottom: 25px;
  right: 15px;
}

